--- a/index.html
+++ b/index.html
@@ -1,30 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Advanced To-Do List</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>perfect-task-planner</title>
+    <meta name="description" content="to do project" />
+    <meta name="author" content="Shreya" />
 <body>
-  <div class="container">
-    <h1>📝 To-Do List</h1>
-
-    <div class="input-section">
-      <input type="text" id="taskInput" placeholder="Enter a new task" />
-      <button onclick="addTask()">Add</button>
-    </div>
-
-    <div class="filters">
-      <button onclick="filterTasks('all')">All</button>
-      <button onclick="filterTasks('active')">Active</button>
-      <button onclick="filterTasks('completed')">Completed</button>
-      <button onclick="clearCompleted()">Clear Completed</button>
-    </div>
-
-    <ul id="taskList"></ul>
-  </div>
-
-  <script src="script.js"></script>
-</body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
